fix: removed charge_gas for all network temp
